--- a/static/style.css
+++ b/static/style.css
@@ -146,6 +146,10 @@ a:visited {
     margin-bottom: 2.5rem;
 }
 
+.move-stats {
+    width: 50%;
+}
+
 .move-description {
     width: 50%;
     padding: 0 2rem;
@@ -271,6 +275,10 @@ footer {
     .move-description {
         width: 100%;
         padding: 0 0 1rem;
+    }
+
+    .move-stats {
+        width: 100%;
     }
 
     table.move-stats {
