--- a/templates/move.html.j2
+++ b/templates/move.html.j2
@@ -1,5 +1,6 @@
 {% extends "base.html.j2" %}
 {% block title %}{{move.name}} - serfetchdex{% endblock %}
+{% import "macros/tables.py" as table_utils %}
 {% block head %}
     <link rel="stylesheet" href="/static/pokemon-assets/css/symbols.css">
     <link rel="stylesheet" href="/static/icons/icons.css">    
@@ -11,6 +12,11 @@
                 <span class="damage-class {{move.damage_class}}" alt="{{move.damage_class|title}} move" title="{{move.damage_class|title}} move"></span>
                 <a href="/types/{{move.type}}"><span class="type-bar {{move.type}}" alt="{{move.type|title}}-type move" title="{{move.type|title}}-type move"></span></a>
             </span>
+        </span>
+        <span class="move-description">
+            <h2>Description</h2>
+            <hr />
+            <p>{{move.flavor_text|parse_links}}</p>
         </span>
         <span class="move-details">
             <table class="move-stats">
@@ -35,11 +41,7 @@
                     </tr>
                 </tbody>
             </table>
-            <span class="move-description">
-                <h2>Description</h2>
-                <hr />
-                <p>{{move.flavor_text|parse_links}}</p>
-            </span>
+            {{ table_utils.type_chart(efficiencies) }}
         </span>
     <h2>Flags</h2>
     <hr />
