add pokémon templates

--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="/moves">moves</a></li>
                 <li><a href="/abilities">abilities</a></li>
-                <li><a href="#">pokémon</a></li>
+                <li><a href="/pokemon">pokémon</a></li>
             </ul>
         </nav>
         <main>
