--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@
     box-sizing: border-box
   }
   
+/* PAGE LAYOUT */
 
 body {
     background: #c4e3cb;
@@ -15,17 +16,18 @@ body {
     font-family: 'Open Sans', sans-serif;
     padding: env(safe-area-inset);
 }
+a:link {
+    font-weight: bold;
+    text-decoration: none;
+    color: #458ce8;
+}
 
-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding-left: 12.5vw;
-    background: #6a9c78;
-    box-shadow: 0 0 5px 5px #295335b5;
-    display: flex;
-    align-items: center;
+a:visited {
+    color: #8974c6;
+}
+
+hr {
+    border: 1px solid #cccbc3;
 }
 
 header {
@@ -39,6 +41,10 @@ header h1 {
     margin: .75rem 0;
 }
 
+header > a:hover, nav > ul a:hover {
+    color: white;
+}
+
 header a:link, header a:visited {
     padding: 0;
     color: #ded;
@@ -46,6 +52,41 @@ header a:link, header a:visited {
 
 header > a > img {
     margin: -25px;
+}
+
+main {
+    background: #f9f8ed;
+    box-shadow: 0 0 10px 10px #29533552;
+    flex: 1 1 auto;
+    margin: 3.3rem auto 0;
+    padding: 4rem 5rem 2rem;
+    width: 70%;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+}
+
+section:not(:last-of-type) {
+    margin-bottom: 2rem;
+}
+
+h2 {
+    margin-bottom: 0;
+}
+
+/* Navigation */
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding-left: 12.5vw;
+    background: #6a9c78;
+    box-shadow: 0 0 5px 5px #295335b5;
+    display: flex;
+    align-items: center;
+    z-index: 1;
 }
 
 nav > ul {
@@ -67,21 +108,7 @@ nav > ul a, nav > ul a:link, nav > ul a:visited {
     color: #ded;
 }
 
-header > a:hover, nav > ul a:hover {
-    color: white;
-}
-
-main {
-    background: #f9f8ed;
-    box-shadow: 0 0 10px 10px #29533552;
-    flex: 1 1 auto;
-    margin: 3.3rem auto 0;
-    padding: 4rem 5rem 2rem;
-    width: 70%;
-    display: flex;
-    flex-flow: column;
-    justify-content: space-between;
-}
+/* Move page */
 
 .move-tagline {
     display: flex;
@@ -95,54 +122,6 @@ main {
 .move-tagline img {
     height: 2em;
     margin: 0 .5rem;
-}
-
-img.type-icon {
-    border-radius: .4em;
-    height: 2em;
-}
-
-.type-efficiencies {
-    display: flex;
-    justify-content: space-around;
-}
-
-.type-efficiencies h3 {
-    margin-top: 0;
-}
-
-.type-efficiencies > .side {
-    flex: 1 1 0px;
-    padding: 0 1rem;
-}
-
-.type-efficiencies table {
-    width: 100%;
-}
-
-.type-efficiencies table td > ul {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    margin: .25rem 0;
-}
-
-.type-efficiencies table th, .type-efficiencies table td {
-    padding: 0;
-}
-
-hr {
-    border: 1px solid #cccbc3;
-}
-
-a:link {
-    font-weight: bold;
-    text-decoration: none;
-    color: #458ce8;
-}
-
-a:visited {
-    color: #8974c6;
 }
 
 .move-details {
@@ -165,6 +144,189 @@ a:visited {
 .move-description h2 {
     margin: 0;
 }
+
+ul.flags {
+    columns: 4;
+    break-inside: avoid;
+    column-gap: 2rem;
+}
+
+ul.flags > li {
+    break-inside: avoid;
+}
+
+li.crossed-out {
+    color: #cccbc3;
+    text-decoration: line-through;
+}
+
+ul.flags > li > ul {
+    list-style: none;
+    font-size: .75em;
+    padding-left: 0;
+    font-style: italic;
+}
+
+/* Pokémon page */
+
+.pokemon-tagline {
+    display: block;
+    margin-bottom: 1.5em;
+}
+
+.pokemon-tagline h1 {
+    margin: 0 auto;
+    font-size: 26pt;
+}
+
+.pokemon-tagline h2 {
+    margin-top: 0;
+    font-size: 18pt;
+}
+
+.pokemon-essentials {
+    display: flex;
+}
+
+.pokemon-portrait {
+    display: flex;
+    flex-direction: column;
+    width: min-content;
+}
+
+.pokemon-portrait > img, .pokemon-portrait > a > img {
+    background: url("/static/pokemon-background.png");
+    background-size: 100%;
+    height: 256px;
+}
+
+.pokemon-portrait > .pokemon-types {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.pokemon-portrait > .pokemon-types > a > .type-bar {
+    margin: 2px;
+}
+
+.pokemon-essentials > dl {
+    margin: 0 2rem;
+    width: 100%;
+}
+
+.pokemon-essentials dl > dt {
+    font-weight: bold;
+}
+
+.pokemon-essentials dl > dt:not(:first-of-type) {
+    border-top: 1px solid #cccbc3;
+    margin-top: 1rem;
+    padding-top: 1rem;
+}
+
+.pokemon-essentials dl > dd:nth-of-type(2) {
+    padding-bottom: .4rem;
+}
+
+a.hidden-ability {
+    font-style: italic;
+    border-bottom: 1px #cccbc3 dotted;
+    cursor: help;
+}
+
+table.pokemon-stats > thead > tr {
+    border-top: none;
+}
+
+table.pokemon-stats h3 {
+    margin-top: 0;
+}
+
+table.pokemon-stats tr > td:first-of-type {
+    display: block;
+    white-space: nowrap;
+    text-align: right;
+}
+
+table.pokemon-stats tr > td:nth-of-type(2) {
+    width: 100%;
+}
+
+table.pokemon-stats tr > td > span {
+    display: inline-block;
+    background: #6a9c78;
+    height: 1em;
+}
+
+.pokemon-details {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.pokemon-details > * {
+    width: 48%;
+}
+
+table.pokemon-misc {
+    margin-right: 1rem;
+    width: 50%;
+}
+
+table.pokemon-misc h3 {
+    text-align: left;
+    margin: 0 auto;
+}
+
+.other-forms {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.other-forms  img {
+    transform: scale(.75);
+}
+
+.other-forms h4 {
+    text-align: center;
+    margin: 0;
+}
+/* Type matchup chart */
+
+.type-efficiencies {
+    display: flex;
+    justify-content: space-around;
+}
+
+.type-efficiencies h3 {
+    margin-top: 0;
+}
+
+.type-efficiencies > .side thead tr {
+    border-top: none;
+}
+
+.type-efficiencies > .side {
+    flex: 1 1 0px;
+    padding: 0 1rem;
+}
+
+.type-efficiencies table {
+    width: 100%;
+}
+
+.type-efficiencies table td > ul {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin: .25rem 0;
+}
+
+.type-efficiencies table th, .type-efficiencies table td {
+    padding: 0;
+}
+
+/* Tables */
 
 table {
     border-collapse: collapse;
@@ -200,6 +362,11 @@ table.tablelist > thead > tr {
     }
 }
 
+table.pokemonlist ul {
+    list-style: none;
+    padding-left: 0;
+}
+
 tr {
     border-top: 1px solid #cccbc3;
     border-bottom: 1px solid #cccbc3;
@@ -225,6 +392,8 @@ td, th {
     padding: .5rem;
 }
 
+/* Move table */
+
 table.movelist {
     min-width: 60%;
     table-layout: fixed;
@@ -238,28 +407,6 @@ table.movelist td:first-of-type, table.movelist th:first-of-type {
     width: 8em;
 }
 
-ul.flags {
-    columns: 4;
-    break-inside: avoid;
-    column-gap: 2rem;
-}
-
-ul.flags > li {
-    break-inside: avoid;
-}
-
-li.crossed-out {
-    color: #cccbc3;
-    text-decoration: line-through;
-}
-
-ul.flags > li > ul {
-    list-style: none;
-    font-size: .75em;
-    padding-left: 0;
-    font-style: italic;
-}
-
 footer {
     font-size: .75em;
     border-top: 1px solid #cccbc3;
@@ -270,21 +417,11 @@ footer {
 }
 
 @media only screen and (max-width: 800px) {
-    table.movelist td:last-of-type, table.movelist th:last-of-type {
-        display: none;
-    }
-
-    table.movelist th:nth-of-type(4) > span:first-of-type {
-        display: none;
-    }
-
-    table.movelist th:nth-of-type(4) > span:last-of-type {
-        display: initial;
-    }
+    /* Move page */
 
     .move-tagline {
         flex-direction: column;
-        margin-bottom: 1rem;
+        margin: 1.5rem 0;
     }
 
     .move-details {
@@ -304,8 +441,32 @@ footer {
         width: 100%;
     }
 
-    .side h3 {
+    /* Pokémon page */
+    .pokemon-tagline, .pokemon-tagline h2 {
         margin-bottom: 0;
+    }
+
+    .pokemon-tagline h1 {
+        margin-top: 2rem;
+    }
+
+
+    .pokemon-details {
+        flex-direction: column;
+    }
+
+    /* Tables */
+
+    table.movelist td:last-of-type, table.movelist th:last-of-type {
+        display: none;
+    }
+
+    table.movelist th:nth-of-type(4) > span:first-of-type {
+        display: none;
+    }
+
+    table.movelist th:nth-of-type(4) > span:last-of-type {
+        display: initial;
     }
 
     table.move-stats {
@@ -313,12 +474,10 @@ footer {
         width: 100%;
     }
 
+    /* Type matchup table */
+
     .type-efficiencies {
         justify-content: center;
-    }
-
-    .side h3 {
-        text-align: center;
     }
 
     .side table {
@@ -349,10 +508,27 @@ footer {
 }
 
 @media only screen and (max-width: 600px) {
+    /* Page layout */
     body {
         max-width: 100vw;
         overflow-x: clip;
     }
+
+    header {
+        margin-right: .75rem;
+    }
+
+    main {
+        width: 100%;
+        padding: 3rem 1rem 1rem;
+    }
+
+    content {
+        max-width: 100%;
+    }
+
+    /* Navigation */
+
 
     nav {
         padding-left: 0;
@@ -363,22 +539,55 @@ footer {
         left: -15px;
     }
 
-    header {
-        margin-right: .75rem;
-    }
-
-    main {
-        width: 100%;
-        padding: 5rem 1rem 1rem;
-    }
-
-    content {
-        max-width: 100%;
-    }
+    /* Move page */
 
     ul.flags {
         columns: 1;
     }
+
+    /* Pokémon page */
+
+    .pokemon-essentials {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .pokemon-portrait {
+        width: 100%;
+        align-items: center;
+    }
+
+    .pokemon-portrait > img {
+        height: initial;
+        width: 100%;
+    }
+
+    .pokemon-essentials dl {
+        margin: initial;
+    }
+
+    table.pokemon-stats {
+        border-top: 1px solid #cccbc3;
+        margin-top: 1rem;
+    }
+
+    .pokemon-details > .type-efficiencies, .pokemon-details > table.pokemon-misc {
+        width: 100%;
+    }
+
+    table.pokemon-misc {
+        margin-top: 1rem;
+    }
+
+    table.pokemon-misc th {
+        text-align: center;
+    }
+
+    table.pokemon-misc td {
+        width: 33.3%;
+    }
+
+    /* Move table */
 
     table.movelist {
         width: 100%;
