--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -8,9 +8,9 @@
         {% block head %}{% endblock %}
     </head>
     <body>
-        <nav>
+        <nav onmouseover="hover()" onmouseout="unhover()">
             <header>
-                <a href="/"><img src="/static/icons/farfetchd-static.png" onmouseover="hover(this)" onmouseout="unhover(this)" /></a>
+                <a href="/"><img src="/static/icons/farfetchd-static.png" /></a>
                 <a href="/"><h1>serfetchdex</h1></a>
             </header>
             <ul>
