--- a/templates/ability.html.j2
+++ b/templates/ability.html.j2
@@ -1,6 +1,19 @@
 {% extends "base.html.j2" %}
+{% import "macros/tables.py" as table_utils %}
 {% block title %}{{ability.name}} - serfetchdex{% endblock %}
+{% block head %}
+<script type="text/javascript" src="/static/js/sort-movetable.js"></script>
+<link rel="stylesheet" href="/static/icons/icons.css">
+<link rel="stylesheet" href="/static/icons/pokemon.css">
+{% endblock %}
 {% block content %}
     <h1>{{ability.name}}</h1>
     <p>{{ability.flavor_text|parse_links}}</p>
+
+    <h2>Pokémon</h2>
+    <hr />
+    <h3>As an ordinary Ability</h3>
+    {{ table_utils.pokemon_table(ordinary) }}
+    {% if hidden %}<h3>As a Hidden Ability</h3> {{ table_utils.pokemon_table(hidden) }}{% endif %}
+    {% if unique %}<h3>As a unique Ability</h3> {{ table_utils.pokemon_table(unique) }}{% endif %}
 {% endblock %}
