--- a/templates/pokemon.html.j2
+++ b/templates/pokemon.html.j2
@@ -77,7 +77,7 @@
                     <th>Weight</th>
                 </tr>
                 <tr>
-                    <td style="width: 0">
+                    <td style="width: 40%">
                         <span class="gender-bar">
                             {% if pokemon.gender > 0 %}
                                 <span class="male" style="width: {{ (8 - pokemon.gender) * 12.5 }}%"></span>
