--- a/static/icons/icons.css
+++ b/static/icons/icons.css
@@ -28,6 +28,11 @@
     height: 32px;
 }
 
+.movelist .damage-icon {
+    display: block;
+    margin: 0 auto;
+}
+
 .type-bar-small, .type-dynamic {
     width: 109px;
     height: 24px;
@@ -274,7 +279,12 @@
     background-position: -84px -888px;
 }
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1365px) {
+    .movelist .damage-icon {
+        display: inline-block;
+        margin: 0;
+    }
+
     .type-dynamic {
         width: 32px;
         height: 32px;
