--- a/templates/ability.html.j2
+++ b/templates/ability.html.j2
@@ -12,8 +12,7 @@
 
     <h2>Pokémon</h2>
     <hr />
-    <h3>As an ordinary Ability</h3>
-    {{ table_utils.pokemon_table(ordinary) }}
+    {% if ordinary %}<h3>As an ordinary Ability</h3> {{ table_utils.pokemon_table(ordinary) }}{% endif %}
     {% if hidden %}<h3>As a Hidden Ability</h3> {{ table_utils.pokemon_table(hidden) }}{% endif %}
     {% if unique %}<h3>As a unique Ability</h3> {{ table_utils.pokemon_table(unique) }}{% endif %}
 {% endblock %}
